# sham

./: .gitignore  Makefile  README.md  pyproject.toml
sham/: __main__.py  app.py  db.py  error.py
tests/: test_error.py  test_sham.py
