[tool.poetry]
name = "sham"
version = "0.1.0"
description = ""
authors = ["Stephen Molyneaux <stephen@molyneaux.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^19.12.2"
asyncpg = "^0.20.1"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
requests = "^2.23.0"
pytest = "^5.4.1"
pytest-asyncio = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
