[tool.poetry]
name = "sham"
version = "0.1.0"
description = ""
authors = ["Stephen Molyneaux <stephen@molyneaux.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^19.12.2"
aiofiles = "^0.6.0"
asyncpg = {path = "../../build/asyncpg"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
requests = "^2.23.0"
pytest = "^5.4.1"
pytest-asyncio = "^0.11.0"

[tool.poetry.scripts]
sham = 'sham.__main__:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

